--- a/style.css
+++ b/style.css
@@ -7,13 +7,13 @@
 body{
   font-size: 14px;
   font-family: arial;
-  color:#ddd;
+  color:#969694;
 
 }
 
 .header{
   background-color: #222;
-  height: 70px;
+  height: 60px;
   display: flex;
   justify-content: center;
 
@@ -31,6 +31,9 @@ body{
   justify-content: flex-start;
   align-items: center;
 }
+.logo, .searchLabel{
+  color:#ccc;
+}
 
 
 .right{
@@ -41,6 +44,7 @@ body{
 .textField, .home, .about, .products, .service{
   margin-left: 20px;
 }
+
 ul{
   list-style-type: none;
   height: 50px;
@@ -48,7 +52,7 @@ ul{
 
 .green{
   background-color: yellowgreen;
-  height: 300px;
+  height: 280px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -76,7 +80,12 @@ h2{
 .btn{
   margin-top: 20px;
   width: 100px;
-  height: 35px;
+  height: 40px;
+  align-items: flex-start;
+  border-radius: 5px;
+  box-shadow: 1px 1px;
+
+
 }
 .equa{
   height: 60px;
@@ -87,6 +96,148 @@ h2{
 .equa, .headText, .btn{
   margin-left: 50px;
 }
+.main{
+  display: flex;
+  align-items: baseline;
+  justify-content: flex-start;
+  margin-top: 20px;
+}
+h3{
+  font-size: 2.6em;
+  color: #222;
+  margin-left: 50px;
+  margin-right: 30px;
+}
+h4{
+  font-size: 1.6em;
+  color: darkgrey;
+}
+.mainText{
+  color: grey;
+  margin-left: 50px;
+  width: 90%;
+  margin-top: 30px;
+
+}
+.blox{
+  width: 90%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-direction: row;
+  margin: 30px;
+}
+.bloxcombo{
+  display: flex;
+  flex-direction: column;
+  align-items:flex-start;
+
+  margin-left: 30px;
+}
+.link_s{
+  margin-top: 20px;
+  font-size: 1.2em;
+  font-style: oblique;
+  color:blue;
+  margin-bottom: 15px;
+}
+
+.footerText{
+  background-color: #daa520;
+  color: black;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  height: auto;
+  padding: 50px;
+}
+.lin{
+  font-size: 1.4em;
+  margin-bottom: 10px;
+}
+.i{
+  margin-right: 10px;
+  margin-left: 0px;
+  width: 30px;
+  height: auto;
+
+}
+.headies{
+
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.btnF{
+  display: flex;
+  align-items:center;
+  justify-content: center;
+  width: 100px;
+  height: 40px;
+  margin-top: 30px;
+  text-align: center;
+  border-radius: 5px;
+  box-shadow: 1px 1px;
+}
+.btnF:hover, .btn:hover{
+  background-color: darkgrey;
+}
+
+
+
+.it{
+  display: flex;
+  flex-direction: row;
+  align-items: baseline;
+  justify-content: flex-start;
+}
+
+.bloxText{
+  margin-right: 20px;
+  text-align: left;
+}
+
+.copy{
+  display: flex;
+  justify-content: flex-start;
+  margin-left: 50px;
+  margin-bottom: 10px;
+
+}
+
+
+
+.blok{
+  height: 300px;
+  width: 300px;
+  background-color: lightgrey;
+  font-size: 2em;
+  color:grey;
+  text-align: center;
+  padding-top: 100px;
+}
+.footer{
+  text-align: left;
+  margin-top: 20px;
+  margin-left: 50px;
+}
+.footerList{
+  display: flex;
+  justify-content: flex-start;
+  align-items: baseline;
+  color: inherit;
+}
+
+.footerList a{
+  color: blue;
+}
+.footerList a:hover{
+  text-decoration: underline;
+  background-color: white;
+  color:blue;
+}
 
 a {
   color: #ccc;
@@ -94,6 +245,7 @@ a {
   display: block;
 }
 a:hover{
+  display: block;
   color:white;
   background: black;
 }
